fix problem: image too wide in post

--- a/style.css
+++ b/style.css
@@ -20,10 +20,19 @@ body {
     padding-bottom: 40px;
 }
 
+img {
+    border: 0;
+    max-width: 100%;
+}
+
 .post-header{
     text-align:center;
 }
 
 .post-content{
     padding-top:15px;
+}
+
+.article{
+    position: relative;
 }
